@@ -54,5 +54,6 @@ extern void exp_mangoldt(mpz_t res, mpz_t n);
 
 extern uint32_t* partial_sieve(mpz_t start, UV length, UV maxprime);
 extern char* pidigits(UV n);
+extern char* harmreal(mpz_t zn, unsigned long prec);
 
 #endif
