@@ -21,6 +21,8 @@ Revision history for Perl module Math::Prime::Util::GMP
     - is_provable_prime tries less hard to make a BLS75-T5 proof.  Certs may
       be longer, but performance is better.
 
+    - is_power is more efficient (recursion removed, only prime powers checked).
+
 0.28 2014-11-17
 
     [ADDED]
